--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="main">
     <div class="main-conteiner">
         <div class="container">
-           <img src="assets/img/foto.jpg" alt="foto"> 
+           <img src="foto.jpg" alt="foto"> 
             <section class="section 1" id="profile">
             <h1 class="section-title" >Anna Rogozina</h1>
             <h2 class="section-title">Junior frontend developer</h2>
