--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./assets/svg/favicon.ico">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header class="header">
@@ -28,7 +28,7 @@
     <main class="main">
     <div class="main-conteiner">
         <div class="container">
-           <img src="./assets/img/fotosmall.jpg" alt="foto"> 
+           <img src="fotosmall.jpg" alt="foto"> 
             <section class="section 1" id="profile">
             <h1 class="section-title" >Anna Rogozina</h1>
             <h2 class="section-title">Junior frontend developer</h2>
